# ram

./: .editorconfig  .gitattributes  .gitignore  .oxlintrc.json  Cargo.toml  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  README.md  deny.toml  dist-workspace.toml  eslint.config.mjs  justfile  mise.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ram.sln  release-plz.toml  rust-toolchain.toml  rustfmt.toml  tasks.toml  test_invalid.ram  turbo.json
.github/workflows/: codspeed.yml  publish-to-npm.yml  publish-to-pkg.pr.new.yml  publish-to-vsce.yml  release-changelog.yml  release.yml  reusable-release-build.yml
apps/console/: MemoryMachine.Console.csproj  Program.cs  project.json
apps/console/Commands/: RunCommand.cs
apps/console/Extensions/: CommandAppExtensions.cs  HelpExtensions.cs
apps/console/Handlers/: ICommandHandler.cs
apps/console/Models/: BenchmarkOptions.cs  ExportFormat.cs
apps/docs/: package.json  turbo.json
apps/docs/content/docs/: getting-started.mdx  index.mdx  meta.json
apps/docs/src/app/: layout.config.tsx  layout.tsx
apps/vscode/: README.md  package.json
apps/vscode/src/: index.ts
apps/web/: eslint.config.mjs  next.config.ts  package.json  project.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: editor-styles.css  editor-styles.tsx  editor.tsx
apps/web/src/lib/: config.ts  consts.ts  hooks.ts  theme.ts
crates/base_db/: Cargo.toml
crates/base_db/src/: change.rs  input.rs  lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: body.rs  db.rs  expr.rs  ids.rs  lib.rs  lower.rs  name_resolution.rs  source_analyzer.rs  ty.rs
crates/hir/tests/: array_access.rs
crates/hir_analysis/: Cargo.toml  README.md
crates/hir_analysis/examples/: analyze.rs  new_analysis.rs
crates/hir_analysis/src/: context.rs  db.rs  diagnostics_query.rs  error.rs  export.rs  lib.rs  pass.rs  pipeline.rs  tests.rs  types.rs  validation.rs
crates/hir_analysis/src/analysis/: control_flow.rs  data_flow.rs  macros.rs  manager.rs  mod.rs  optimization.rs
crates/hir_analysis/src/analyzers/: mod.rs
crates/hir_analysis/src/analyzers/constant_propagation/: mod.rs
crates/hir_analysis/src/analyzers/control_flow/: graph.rs  mod.rs
crates/hir_analysis/src/analyzers/control_flow_optimizer/: mod.rs
crates/hir_analysis/src/analyzers/data_flow/: graph.rs  mod.rs
crates/hir_analysis/src/analyzers/instruction_validation/: mod.rs
crates/hir_analysis/src/tests/: analyzers.rs  control_flow_optimizer.rs  diagnostics.rs  mod.rs  pipeline.rs
crates/hir_analysis/src/visitors/: base.rs  control_flow.rs  examples.rs  mod.rs  prelude.rs  specialized.rs  tests.rs  traits.rs  type_check.rs  walkers.rs
crates/hir_analysis_derive/: Cargo.toml
crates/hir_analysis_derive/src/: lib.rs
crates/hir_def/: Cargo.toml
crates/hir_def/src/: db.rs  item_scope.rs  item_tree.rs  lib.rs  lower.rs  path.rs
crates/ram/: CHANGELOG.md  Cargo.toml
crates/ram-cli/: Cargo.toml
crates/ram-cli/src/: lib.rs
crates/ram-error/: Cargo.toml
crates/ram-error/src/: lib.rs
crates/ram-parser/: Cargo.toml
crates/ram-parser/src/: lib.rs
crates/ram/src/: cli.rs  color.rs  error.rs  lang.rs  language.rs  lib.rs  lsp.rs  ram.sublime-syntax  run.rs  tracing_setup.rs  version.rs
crates/ram/src/language/: highlighting.rs  mod.rs  parser.rs  syntax_kind.rs
crates/ram_core/: Cargo.toml
crates/ram_core/src/: db.rs  error.rs  instruction.rs  instruction_set.rs  instructions.rs  lib.rs  operand.rs  operand_resolver.rs  plugin.rs  registry.rs
crates/ram_core/src/examples/: instruction_set_example.rs  math_plugin.rs  mod.rs
crates/ram_core/src/tests/: instruction_info_tests.rs  instruction_set_tests.rs
crates/ram_derive/: Cargo.toml
crates/ram_derive/src/: lib.rs
crates/ram_diagnostics/: Cargo.toml
crates/ram_diagnostics/src/: lib.rs
crates/ram_error/: Cargo.toml
crates/ram_error/src/: lib.rs
crates/ram_lsp/: Cargo.toml
crates/ram_lsp/src/: db.rs  highlighting.rs  lib.rs
crates/ram_parser/: Cargo.toml
crates/ram_parser/benches/: bench_main.rs
crates/ram_parser/benches/benchmarks/: mod.rs  simple_input.rs
crates/ram_parser/src/: ast.rs  diagnostic.rs  event.rs  grammar.rs  input.rs  language.rs  lexer.rs  lib.rs  parser.rs  syntax_kind.rs  tests.rs  tree_builder.rs
crates/ram_parser/tests/proptest/: parser_tests.rs
crates/ram_parser/tests/proptest-regressions/: parser_tests.txt
crates/ram_plugin_wasm/: Cargo.toml  README.md
crates/ram_plugin_wasm/src/: error.rs  lib.rs
crates/ram_plugin_wasm/wit/: ram-plugin.wit
crates/ram_syntax/: Cargo.toml
crates/ram_syntax/src/: ast.rs  lib.rs  nodes.rs  syntax_kind.rs
crates/ram_vm/: Cargo.toml
crates/ram_vm/src/: db.rs  io.rs  lib.rs  memory.rs  program.rs  runner.rs  tests.rs  vm.rs
editors/vscode/: README.md  eslint.config.mjs  package.json  tsdown.config.ts
editors/vscode/src/: decorations.ts  decorations.ts.new  index.ts  installation.ts  lsp-service.ts
editors/vscode/syntax/: ram.tmLanguage.json
inputs/: bubble_sort.ram  error.ram  hello.ram  insertion_sort.ram  simple.ram  test1.ram  test2.ram  test3.ram  test4.ram  test5.ram  test6.ram  test7.ram  test_array_access.ram  test_jump.ram
libs/core/core/: Assembly.cs  AssemblyLoader.cs  MemoryMachine.Core.csproj  MemoryMachine.cs  OperandType.cs  project.json
libs/core/core-tests/: ExecutionTests.cs  MemoryMachine.Tests.csproj  ParserTests.cs  Programs.cs
libs/core/core-tests/__snapshots__/: ParserTests.ParseArrayToRegistersShouldCreateValidAST.snap  ParserTests.ParseProgram1ShouldCreateValidAST.snap  ParserTests.ParseProgram2ShouldCreateValidAST.snap  ParserTests.ParseProgram3ShouldCreateValidAST.snap  ParserTests.ParseProgram4ShouldCreateValidAST.snap  (+3 more)
libs/grammar/: package.json  tsconfig.json  turbo.json
libs/grammar/scripts/: generate.ts
libs/grammar/src/: MemoryMachineAssembly.g4  index.ts  monaco.ts  utils.ts
scripts/: package.json
scripts/meta/: constants.js
scripts/misc/: bump-version.js
xtask/: Cargo.toml
(+49 files in other folders)
