[package]
name = "base_db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
salsa.workspace = true
la-arena = "0.3.1"
typed-arena = "2.0.2"
indexmap = "2.9.0"
dashmap.workspace = true
rustc-hash.workspace = true
triomphe.workspace = true
tracing.workspace = true

# Workspace dependencies
ram_error.workspace = true
ram_syntax.workspace = true
