[package]
name = "base_db"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
# Core dependencies
dashmap.workspace    = true
indexmap             = "2.9.0"
la-arena             = "0.3.1"
rustc-hash.workspace = true
salsa.workspace      = true
tracing.workspace    = true
triomphe.workspace   = true
typed-arena          = "2.0.2"

# Workspace dependencies
ram_error.workspace  = true
ram_syntax.workspace = true
