[package]
edition = "2021"
name    = "hir_analysis"
version = "0.1.0"

[dependencies]
miette     = { workspace = true }
petgraph   = { workspace = true }
salsa      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

base_db             = { workspace = true }
hir                 = { workspace = true }
hir_analysis_derive = { workspace = true, optional = true }
ram_core            = { workspace = true }
ram_diagnostics     = { workspace = true }
ram_error           = { workspace = true }

[features]
default = []
macros  = ["hir_analysis_derive"]
