[package]
name = "hir_def"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow.workspace      = true
cstree.workspace      = true
drop_bomb.workspace   = true
indexmap.workspace    = true
itertools.workspace   = true
la-arena.workspace    = true
salsa.workspace       = true
thiserror.workspace   = true
tracing.workspace     = true
typed-arena.workspace = true

# Workspace dependencies
base_db.workspace    = true
ram_error.workspace  = true
ram_parser.workspace = true
ram_syntax.workspace = true
