[package]
name = "ram-cli"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
anstream.workspace = true
clap               = { workspace = true, features = ["derive", "string"] }

[lints]
workspace = true
