[package]
name = "ram-error"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chumsky               = { workspace = true }
miette                = { workspace = true, features = ["syntect-highlighter"] }
thiserror             = { workspace = true }

[lints]
workspace = true
