[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "ram-parser"
repository.workspace = true
version.workspace    = true

[dependencies]
anstream              = { workspace = true }
anyhow                = { workspace = true }
clap                  = { workspace = true }
globset               = { workspace = true, features = ["serde"] }
human-panic           = { workspace = true }
itertools             = { workspace = true }
miette                = { workspace = true, features = ["fancy", "syntect-highlighter"] }
num-derive            = { workspace = true }
num-traits            = { workspace = true }
owo-colors            = { workspace = true }
salsa                 = { workspace = true }
semver                = { workspace = true }
serde                 = { workspace = true, optional = true }
serde_derive          = { workspace = true, optional = true }
serde_json            = { workspace = true, optional = true }
syntect               = { workspace = true }
tempfile              = { workspace = true }
textwrap              = { workspace = true }
thiserror             = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
walkdir               = { workspace = true }

ram-error = { workspace = true }

[lints]
workspace = true
