[package]
name = "ram_core"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
examples = []

[dependencies]
# Core dependencies
salsa.workspace = true
la-arena.workspace = true
typed-arena.workspace = true
indexmap.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
thiserror.workspace = true
miette.workspace = true
once_cell = "1.19.0"

# Workspace dependencies
base_db.workspace = true
ram_error.workspace = true
ram_syntax.workspace = true
