[package]
name = "ram_core"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[features]
default  = []
examples = []

[dependencies]
# Core dependencies
dashmap.workspace     = true
indexmap.workspace    = true
la-arena.workspace    = true
miette.workspace      = true
once_cell             = "1.21.3"
rustc-hash.workspace  = true
salsa.workspace       = true
thiserror.workspace   = true
tracing.workspace     = true
typed-arena.workspace = true

# Workspace dependencies
base_db.workspace    = true
ram_error.workspace  = true
ram_syntax.workspace = true
