[package]
name = "ram_error"

publish.workspace    = true

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
miette    = { workspace = true, features = ["syntect-highlighter"] }
thiserror = { workspace = true }

[lints]
workspace = true
