[package]
name = "ram_lsp"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
dashmap            = { workspace = true }
miette             = { workspace = true }
rustc-hash         = { workspace = true }
salsa              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["io-util", "io-std", "macros", "rt-multi-thread", "time"] }
tower-lsp          = { workspace = true }
tracing            = { workspace = true }
url                = "2.5.4"

base_db            = { workspace = true }
hir                = { workspace = true }
hir_analysis       = { workspace = true }
hir_def            = { workspace = true }
ram_core           = { workspace = true }
ram_diagnostics    = { workspace = true }
ram_error          = { workspace = true }
ram_parser         = { workspace = true }
ram_syntax         = { workspace = true }
