[package]
name = "ram_parser"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
anstream           = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
cstree             = { workspace = true }
drop_bomb          = { workspace = true }
globset            = { workspace = true, features = ["serde"] }
human-panic        = { workspace = true }
itertools          = { workspace = true }
miette             = { workspace = true, features = ["fancy", "syntect-highlighter"] }
num-derive         = { workspace = true }
num-traits         = { workspace = true }
owo-colors         = { workspace = true }
rowan              = { workspace = true }
salsa              = { workspace = true }
semver             = { workspace = true }
serde              = { workspace = true, optional = true }
serde_derive       = { workspace = true, optional = true }
serde_json         = { workspace = true, optional = true }
syntect            = { workspace = true }
tempfile           = { workspace = true }
textwrap           = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir            = { workspace = true }

ram_derive = { workspace = true }
ram_error  = { workspace = true }
ram_syntax = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
