[package]
name = "ram_plugin_wasm"

publish.workspace    = true

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dashmap.workspace   = true
thiserror.workspace = true
tracing.workspace   = true

# WASM Component Model dependencies
wit-bindgen = "0.41.0"

ram_core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys       = "0.3.77"
wasm-bindgen = "0.2.100"

[dev-dependencies]
proptest.workspace = true

[features]
default = []

[package.metadata.component]
package = "ram:plugin"
world   = "ram-plugin"
