[package]
name = "ram_syntax"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cstree       = { workspace = true }
either       = "1.15.0"
ram_derive   = { workspace = true }
serde        = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
tracing      = { workspace = true }

[features]
default = []
serde   = ["dep:serde", "dep:serde_derive", "cstree/serde", "either/serde"]

[lints]
workspace = true
