[package]
name = "ram_vm"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
# Core dependencies
dashmap.workspace     = true
indexmap.workspace    = true
la-arena.workspace    = true
miette                = { workspace = true, features = ["fancy", "syntect-highlighter"] }
rustc-hash.workspace  = true
salsa.workspace       = true
thiserror.workspace   = true
tracing.workspace     = true
typed-arena.workspace = true

# Workspace dependencies
base_db.workspace    = true
hir.workspace        = true
hir_def.workspace    = true
ram_core.workspace   = true
ram_error.workspace  = true
ram_parser.workspace = true
ram_syntax.workspace = true
